# Chat

./: .clang-format  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h  Client.hpp  ClientApp.cpp  ClientConsoleApp.cpp  ClientLib.cpp  ClientLib.h  IClientLib.h  client.cpp
Common/: Common.h  MessageContext.h
Connection/: CMakeLists.txt  Client.cpp  Client.hpp  Message.hpp  ResponseDecoder.cpp  ResponseDecoder.hpp  main.cpp
Connection/common/: Common.hpp  Message.hpp
Connection/handlers/: ResponseDecoder.cpp  ResponseDecoder.hpp
Core/: CMakeLists.txt  main.cpp  net_chat.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  sampleDataGetter.cpp  sampleDataGetter.h
Core/Client/: CMakeLists.txt  Client.cpp  Client.h  Client.hpp
Core/Common/: Asio.h  Common.h  MessageContext.h  MessageType.h  TSqueue.h
Core/Handlers/: ResponseCoder.hpp  ResponseDecoder.h
Core/Interface/: IClient.h  IClient.hpp  IServer.h  IServer.hpp  ISession.h
Core/Server/: CMakeLists.txt  Server.cpp  Server.h  Server.hpp  Session.cpp  Session.h  Session.hpp
Factories/: ClientFactory.cpp  ClientFactory.hpp  ServerFactory.cpp  ServerFactory.hpp
Handlers/: ResponseCoder.h
NewCore/Client/: CMakeLists.txt  Client.cpp  Client.hpp  IClient.cpp  IClient.h
NewCore/Common/: Common.h  Message.h  MessageContext.hpp  MessageType.h
NewCore/Handlers/: ResponseDecoder.cpp  ResponseDecoder.hpp
NewCore/Interface/: IClient.hpp  IServer.hpp  ISession.hpp
NewCore/Server/: CMakeLists.txt  IServer.cpp  IServer.h  Server.cpp  Server.hpp  Session.cpp  Session.h  Session.hpp
SampleCore/: net_client.h  net_common.h  net_connection.h
Server/: CMakeLists.txt  ServerConsoleApp.cpp  ServerLib.cpp  ServerLib.h  server.cpp
Tests/: CMakeLists.txt  ResponseCoderTest.cpp
UI/: CMakeLists.txt
UI/ClientUI/: CMakeLists.txt
UI/ConsoleApp/Client/: CMakeLists.txt  ClientApp.cpp
UI/ConsoleApp/Server/: CMakeLists.txt  ServerApp.cpp
UI/QtApp/Client/: mainwindow.cpp
UI/build-ClientUI-Desktop_x86_windows_msys_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
UI/build-ClientUI-Desktop_x86_windows_msys_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
UI/build-ClientUI-Desktop_x86_windows_msys_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
UI/build-ClientUI-Desktop_x86_windows_msys_pe_64bit-Debug/ClientUI_autogen/: deps
UI/build-ClientUI-Desktop_x86_windows_msys_pe_64bit-Debug/ClientUI_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
lib/GTest/: CMakeLists.txt  Tests.cpp
lib/sqlite3/: CMakeLists.txt
sample/: main.cpp  sampleDataGetter.h
src/: CMakeLists.txt  main.cpp
(+11 files in other folders)
